<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="181dp"
        android:layout_marginBottom="480dp"
        android:background="@color/veryDarkBlue"
        android:fontFamily="@font/enriqueta_bold"
        android:text="@string/button1"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="294dp"
        android:layout_height="63dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="618dp"
        android:fontFamily="@font/enriqueta_bold"
        android:text="@string/choose_a"
        android:textAlignment="textStart"
        android:textColor="@color/veryDarkBlue"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="390dp"
        android:background="@color/veryDarkBlue"
        android:fontFamily="@font/enriqueta_bold"
        android:text="@string/button2"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="357dp"
        android:layout_marginBottom="300dp"
        android:background="@color/veryDarkBlue"
        android:fontFamily="@font/enriqueta_bold"
        android:text="@string/button3"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="86dp"
        android:layout_height="84dp"
        android:layout_marginStart="285dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="95dp"
        android:adjustViewBounds="true"
        android:background="@drawable/button_background"
        android:fontFamily="@font/enriqueta_bold"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:scaleType="centerCrop"
        android:text="@string/button4"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_icon" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="86dp"
        android:layout_height="84dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="95dp"
        android:adjustViewBounds="true"
        android:background="@drawable/button_background"
        android:contentDescription="@string/settings"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_icon" />

</android.support.constraint.ConstraintLayout>